2008-06-17  Guy Martin  <gmsoft@tuxicoman.be>

[BZ #5957]
	* sysdeps/unix/sysv/linux/hppa/nptl/lowlevellock.h:
	Use shared futex in lll_wait_tid().